# sky_pro_dev

./: README.md  pyproject.toml
htmlcov/: index.html
logs/: test_log_division_by_zer_file.txt  test_log_ok_file.txt
src/: decorators.py  generators.py  main.py  masks.py  processing.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
