[tool.poetry]
name = "homework-9-1"
version = "0.1.0"
description = ""
authors = ["Svetlana Shambina <szxd2009@yandex.ru>"]
readme = "README.md"
packages = [{include = "homework_9"}]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.12.0"


[tool.black]
line-length = 119
exclude = ".git"


[tool.isort]
line_length = 119


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
